# lekiwi_ros2

./: LICENSE  README.md
lekiwi_base_control/: CMakeLists.txt  README.md  package.xml
lekiwi_base_control/config/: base_controllers.yaml  teleop_config.yaml
lekiwi_base_control/docs/: architecture.md  getting_started.md
lekiwi_base_control/launch/: base_control.launch.py  teleop.launch.py
lekiwi_base_control/src/: estop_node.cpp  motor_diagnostics_node.cpp
lekiwi_base_control/urdf/: base.urdf.xacro  base_properties.xacro
lekiwi_base_control/urdf/meshes/: hd_webcam.stl
lekiwi_bringup/: .gitignore  CMakeLists.txt  README.md  package.xml
lekiwi_bringup/config/: laser_config.yaml  webcam_calibration.yaml  webcam_config.yaml
lekiwi_bringup/launch/: base.launch.py  laser.launch.py  webcam.launch.py
lekiwi_control/: CMakeLists.txt  package.xml
lekiwi_control/config/: base_controllers.yaml  joy_teleop_config.yaml  motor_diagnostics_config.yaml  teleop_config.yaml
lekiwi_control/launch/: base.launch.py  teleop.launch.py
lekiwi_description/: CMakeLists.txt  README.md  package.xml
lekiwi_description/meshes/: ld06_lidar.stl
lekiwi_description/urdf/: base.common.xacro  base.control.xacro  base.urdf  base.urdf.xacro  base_properties.xacro
lekiwi_description/visualizer/: README.md  codepen_github.html
lekiwi_teleop/: CMakeLists.txt  package.xml
lekiwi_teleop/config/: joy_config.yaml  teleop_config.yaml
lekiwi_teleop/launch/: teleop.launch.py
